--- a/VisaRoom/VisaRoom.Web/Views/DashBoard/Index.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/DashBoard/Index.cshtml
@@ -1,139 +1,149 @@
-﻿@{
+﻿@using VisaRoom.Web.App_GlobalResources;
+@{
     Layout = null;
     Layout = "~/Views/Shared/_LayoutDashBoard.cshtml";
 }
 
 <div class="row">
-    <div class="col-md-4">
-        <div class="panel panel-red">
-            <div class="panel-heading">
+    <div class="col-md-4" >
+        <div class="panel panel-magen dummy"  >
+            <div class="panel-heading in" >
                 <div class="row">
-                    <div class="col-xs-3">
+                    <div class="col-xs-12">
                         <i class="fa fa-question fa-5x"></i>
+                        <span class="badge badge-warning" >5</span>
                     </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">13</div>
-                        <div>@Resources.Resource.lbl_MyQuestions</div>
+                    <div class="col-xs-12" >                       
+                        <div><p>@Resource.lbl_MyQuestions</p></div>
+                         <div>
+                             @Html.Raw(@Resource.Detail_Question)
+                         </div>
+                        <div>
+                            <br />
+                            <button type="button"  class="btn btn-warning">@Html.Raw(@Resource.lbl_AskNow)</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">@Resources.Resource.lbl_ViewDetails</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
+            
         </div>
     </div>    
     <div class="col-md-4">
-        <div class="panel panel-green">
-            <div class="panel-heading">
+        <div class="panel panel-green dummy">
+            <div class="panel-heading in">
                 <div class="row">
-                    <div class="col-xs-3">
+                    <div class="col-xs-12">
                         <i class="fa fa-tasks fa-5x"></i>
+                        <span class="badge badge-warning" >5</span>
                     </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">12</div>
-                        <div>@Resources.Resource.lbl_VisaAnswers</div>
+                    <div class="col-xs-12">                       
+                        <div><p>@Resource.lbl_MyDocs</p></div>
+                        <div>
+                            @Html.Raw(@Resource.Detail_Doc)                            
+                         </div>
+                        <div>
+                            <br />
+                            <button type="button"  class="btn btn-warning">@Html.Raw(@Resource.lbl_Upload)</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">@Resources.Resource.lbl_ViewDetails</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
+           
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
+    <div class="col-md-4" >
+        <div class="panel panel-purpol dummy">
+            <div class="panel-heading in" >
                 <div class="row">
-                    <div class="col-xs-3">
+                    <div class="col-xs-12">
                         <i class="fa fa-comments fa-5x"></i>
+                        <span class="badge badge-warning" >5</span>
                     </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">26</div>
-                        <div>@Resources.Resource.lbl_MyChat</div>
+                    <div class="col-xs-12">
+                        
+                        <div>
+                            <p>@Resource.lbl_MyChat</p>
+                        </div>
+                        <div>
+                             @Html.Raw(@Resource.Detail_Chat)   
+                        </div>                     
                     </div>
                 </div>
             </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">@Resources.Resource.lbl_ViewDetails</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
+            
         </div>
     </div>    
-    <div class="col-md-4">
-        <div class="panel panel-red">
-            <div class="panel-heading">
+    <div class="col-md-4" >
+        <div class="panel panel-blue dummy">
+            <div class="panel-heading in">
                 <div class="row">
-                    <div class="col-xs-3">
+                    <div class="col-xs-12">
                         <i class="fa fa-search-plus fa-5x"></i>
+                         <span class="badge badge-warning" >5</span>
                     </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">13</div>
-                        <div>@Resources.Resource.lbl_SearchVisas</div>
+                    <div class="col-xs-12">
+                       
+                        <div><p>@Resource.lbl_SearchVisas</p></div>
+                        <div>
+                            @Html.Raw(@Resource.Detail_Search)                             
+                         </div>
+                        <div>
+                            <br />
+                            <button type="button"  class="btn btn-warning">@Html.Raw(@Resource.lbl_Search)</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">@Resources.Resource.lbl_ViewDetails</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
+            
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="panel panel-red">
-            <div class="panel-heading">
+    <div class="col-md-4" >
+        <div class="panel panel-red dummy">
+            <div class="panel-heading in" >
                 <div class="row">
-                    <div class="col-xs-3">
+                    <div class="col-xs-12">
                         <i class="fa fa-group fa-5x"></i>
+                        <span class="badge badge-warning" >5</span>
                     </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">13</div>
-                        <div>@Resources.Resource.lbl_AgentsMeetings</div>
+                    <div class="col-xs-12">
+                        
+                        <div><p>@Resource.lbl_AgentsMeetings</p></div>
+                        <div>
+                            @Html.Raw(@Resource.Detail_Agent)
+                             
+                         </div>
+                        <div>
+                            <br />
+                            <button type="button"  class="btn btn-warning">@Html.Raw(@Resource.lbl_MakeAppointment)</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">@Resources.Resource.lbl_ViewDetails</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
+            
         </div>
     </div>
-    <div class="col-md-4">
-        <div class="panel panel-yellow">
-            <div class="panel-heading">
+    <div class="col-md-4" >
+        <div class="panel panel-yellow dummy " >
+            <div class="panel-heading in" >
                 <div class="row">
-                    <div class="col-xs-3">
-                        <i style="color:yellow" class="fa fa-credit-card fa-5x"></i>
+                    <div class="col-xs-12">
+                        <i class="fa fa-credit-card fa-5x"></i>
+                        <span class="badge badge-warning" >5</span>
                     </div>
-                    <div class="col-xs-9 text-right">
-                        <div class="huge">124</div>
-                        <div>@Resources.Resource.lbl_Payment</div>
+                    <div class="col-xs-12">                       
+                        <div><p>@Resource.lbl_Payment</p></div>
+                        <div>
+                            @Html.Raw(@Resource.Detail_Payment)
+                             
+                         </div>
+                        <div>
+                            <br />
+                            <button type="button"  class="btn btn-warning">@Html.Raw(@Resource.lbl_Pay)</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">@Resources.Resource.lbl_ViewDetails</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
+           
         </div>
     </div>                
 </div>
