--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutDashBoard.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutDashBoard.cshtml
@@ -2,156 +2,100 @@
 @using BootstrapSupport
 @using NavigationRoutes
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color:white">
     <head>
         <meta charset="utf-8" />
-        <title>@ViewBag.Title - Visa Room</title>
+        <title>@ViewBag.Title - VisaRoom</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Scripts.Render("~/bundles/jquery")
-        @Styles.Render("~/content/bundle")
+        @Styles.Render("~/Content/DashBoard")
         @Scripts.Render("~/bootstrapjs")
         @Scripts.Render("~/bundles/modernizr")
-        
+        @Scripts.Render("~/mainScript")
+       
+        @Styles.Render("~/content/publicPagesCss")
+        @Scripts.Render("~/publicPagesJs")    
+       
+        @RenderSection("styles", required: false)
 
     </head>
-    <body>
-        <div id="wrapper" >
-
+    <body id="bodyBackGround" >
+        @Html.Partial("_ProcessingModal")
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top"  role="navigation" style="background-color:#39B7CD; margin-bottom: 0;">
-            <div class="navbar-header" >
-                <a class="navbar-brand"  style="width:225px; background-image:url(/Images/Logo.PNG)" href="#"></a>
-                <button type="button"  class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                
-            </div>
-            
-            <!-- /.navbar-header -->
-
-            <ul class="nav navbar-top-links navbar-right">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-messages">                       
-                    </ul>
-                    <!-- /.dropdown-messages -->
-                </li>
-                <!-- /.dropdown -->
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-tasks">
-                       
-                    </ul>
-                    <!-- /.dropdown-tasks -->
-                </li>
-                <!-- /.dropdown -->
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-alerts">
-                       
-                    </ul>
-                    <!-- /.dropdown-alerts -->
-                </li>
-                <!-- /.dropdown -->
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                    </ul>
-                    <!-- /.dropdown-user -->
-                </li>
-                <!-- /.dropdown -->
-            </ul>
-            <!-- /.navbar-top-links -->
-
-            <div class="navbar-default sidebar"  role="navigation" style="opacity:0.9">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        
-                        <li>   
-                            <p class="text-center">                        
-                            <img src="~/assets/UserPhotos/women.jpg" width="60%" class="user-image img-responsive logo-center"/>    
-                            </p>                     
-                        </li>
-                         <li>
-                           
-                            <p class="text-center">
-                                <strong>Mario Alvarez</strong>
-                                <br />
-                                <strong>34</strong>
-                                <br />
-                                <strong>Single</strong>
-                                <br />
-                                <strong>6.5 IELTS</strong>
-                                <br />
-                                <strong>(Valid until 12/12/15)</strong>
-                            </p>
-                               
-                        </li>
-                        <li>
-                            <a class="sidebarFont"><i class="fa fa-book fa-fw"></i>  About Me </a>
-                        </li>
-                        <li>
-                            <a  class="sidebarFont"><i class="fa fa-building fa-fw"></i> City</a>
-                          
-                        </li>
-                        <li>
-                            <a  class="sidebarFont"><i class="fa fa-book fa-fw"></i> Visa Hold</a>
-                        </li>
-                        <li>
-                            <a  class="sidebarFont"><i class="fa fa-graduation-cap fa-fw"></i> Bachelor of System Engineree</a>
-                        </li>
-                        <li>
-                            <a  class="sidebarFont"><i class="fa fa-language fa-fw"></i> English, Spanish</a>
-                            
-                          
-                        </li>
-                        <li>
-                            <a  class="sidebarFont"><i class="fa fa-home fa-fw"></i> Spain</a> 
-                        </li>
-                        
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
-            </div>
-            <!-- /.navbar-static-side -->
-        </nav>
-
-            <div id="body" >
-                <div id="page-wrapper" style="opacity:0.8">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1 class="page-header">Dashboard</h1>
-                        </div>
-                        <!-- /.col-lg-12 -->
+        <div class="header" id="header">
+		    <div class="container" >
+			    <div class="header-logo">
+				    <a href="" ><img src="../images/logo241x162.png" style="max-height:80px; max-width:100%" alt=""/></a>
+			    </div>
+			    <div class="top-nav" style="text-align:right; float: right">
+				    <span class="menu"><img src="../images/menu-icon.png" alt=""/></span>
+				    <ul class="nav1">
+					    
+                        <li>@Html.ActionLink("LogOut", "Login", "Account")</li>
+				    </ul>
+				   
+			    </div>
+			   
+           
+			    <div class="clearfix"> </div>
+		    </div>	
+	    </div>
+        <div class="container" style="width:100%;">
+            <div  class="row">
+                <div  class="col-md-2  hidden-xs" style="color:white; background-color:#44546A; min-height: 540px; font-size:16px; text-align:left">
+                    <div>
+                        <p class="text-center">                        
+                        <img src="~/assets/UserPhotos/women.jpg" width="60%" class="user-image img-responsive logo-center"/>    
+                        </p>        
                     </div>
-                                @RenderSection("featured", required: false)
-                                <section >
-                                    @RenderBody()
-                                </section>                            
-                    <!-- /.container-fluid -->
-                </div>                
-            </div>
-
-        </div>
+                    
+                    <div class="PersonalDetailDiv">
+                        <p class="text-center">
+                            <strong>Mario Alvarez</strong>
+                            <br />
+                            <strong style="font-size:14px">34 Single</strong>
+                            <br />
+                                
+                            <strong style="font-size:14px">6.5 IELTS</strong>
+                            <br />
+                            <strong style="font-size:14px">(Valid until 12/12/15)</strong>
+                        </p>
+                     </div>
+                    <div class="PersonalDetailDiv">
+                        <i class="fa fa-book fa-fw"></i>  About Me 
+                    </div>
+                    <div class="PersonalDetailDiv">
+                        <i class="fa fa-building fa-fw"></i> City
+                    </div>
+                    <div class="PersonalDetailDiv">
+                        <i class="fa fa-book fa-fw"></i> Visa Hold
+                    </div>
+                    <div class="PersonalDetailDiv">
+                        <i class="fa fa-graduation-cap fa-fw"></i> Bachelor of System Engineree
+                    </div>
+                    <div class="PersonalDetailDiv">
+                        <i  class="fa fa-language fa-fw"></i> English, Spanish
+                    </div>                   
+                    <div class="PersonalDetailDiv">
+                        <i class="fa fa-home fa-fw"></i> Spain
+                    </div>
+                        
+                   
+                </div>
+                <div class="col-md-10" >
+                    <div style="background-color:rgba(255,255,255,0.5); min-height: 540px;" >
+                        @RenderSection("featured", required: false) 
+                        <section >                
+                            @Html.Partial("_alerts")
+                            @RenderBody()
+                        </section> 
+            
+                
+                    </div>
+                </div>
+           </div>
+       </div>
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
@@ -159,8 +103,6 @@
                 </div>
             </div>
         </footer>
-
-       
-        @RenderSection("scripts", required: false)
+@RenderSection("scripts", required: false)
     </body>
 </html>
